recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: ':' expected but '=' found.
  def square(d=int){
              ^FourSquare:15: error: identifier expected but '}' found.
}
^